@@ -1,3 +1,7 @@
+2010-04-07  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_option.c (ol_option_startup_player_changed): FIX: issue 78, the text entry of customize player startup command can is sensitive now
+
 2010-04-01  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_osd_window.c (ol_osd_window_mouse_timer): FIX: Mouse translucent sometimes doesn't work
